--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </section>
 
   <script src="lib/html5-qrcode.min.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+
 </body>
 </html>
