--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
     <!-- Tu script -->
     <script src="script.js"></script>
 
+    <div id="debug-console" style="background: #000; color: #0f0; font-family: monospace; font-size: 12px; padding: 10px; max-height: 200px; overflow-y: auto;"></div>
+
+
 </body>
 </html>
