--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h2>Escanear código QR</h2>
         <div id="qr-reader" style="width: 100%"></div>
         <div id="qr-result"></div>
+        <button id="play-button" style="display:none;">Reproducir canción</button>
         <button onclick="volverAlMenu()">Volver al menú</button>
     </section>
 
@@ -42,6 +43,6 @@
     <div id="debug-console" style="background: #000; color: #0f0; font-family: monospace; font-size: 12px; padding: 10px; max-height: 200px; overflow-y: auto;"></div>
 
 
-    
+
 </body>
 </html>
