--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>Escanear código QR</h2>
         <div id="qr-reader" style="width: 100%"></div>
         <div id="qr-result"></div>
-        <button id="play-button" style="display:none;">Reproducir canción</button>
+        <button id="play-toggle-button" style="display:none;">Reproducir</button>
         <button onclick="volverAlMenu()">Volver al menú</button>
     </section>
 
