--- a/index.html
+++ b/index.html
@@ -34,15 +34,10 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
 
-    <!-- html5-qrcode -->
     <script src="lib/html5-qrcode.min.js"></script>
-
-    <!-- Tu script -->
     <script src="script.js"></script>
 
-    <div id="debug-console" style="background: #000; color: #0f0; font-family: monospace; font-size: 12px; padding: 10px; max-height: 200px; overflow-y: auto;"></div>
-
-
+    <!-- <div id="debug-console" style="background: #000; color: #0f0; font-family: monospace; font-size: 12px; padding: 10px; max-height: 200px; overflow-y: auto;"></div> -->
 
 </body>
 </html>
