--- a/index.html
+++ b/index.html
@@ -33,17 +33,14 @@
     <section id="escaner" class="pantalla pantalla-escaner pantalla-oculta">
         <h2 class="titulo-escaner">Escanear código QR</h2>
         <div id="qr-reader" style="width: 100%"></div>
-        <div id="qr-result"></div>
-        <button id="play-button" class="btn btn-play estado-play" style="display: none;" data-estado="play"></button>
-        <p id="repro-status"></p>
         <button class="btn btn-volver" data-texto="Volver al menú"></button>
     </section>
 
     <!-- Cargando canción -->
     <section id="reproductor" class="pantalla pantalla-oculta fondo-cargando">
         <h2 id="repro-status">Canción lista para reproducir</h2>
-        <button id="play-button" class="estado-play" style="display: none;" data-estado="play"></button>
-        <p id="repro-status"></p>
+        <button id="play-button" class="btn btn-play estado-play" data-estado="play"></button>
+        <button class="btn btn-volver" data-texto="Volver al menú"></button>
     </section>
 
     <!-- Firebase SDK -->
