--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Cargando canción -->
     <section id="reproductor" class="pantalla pantalla-oculta fondo-cargando">
-        <div class="loader" id="loader"></div>
+        <!-- <div class="loader" id="loader"></div> -->
         <h2 id="repro-status">Canción lista para reproducir</h2>
         <button id="play-button" class="btn btn-play estado-play" data-estado="play"></button>
         <button class="btn btn-volver" data-texto="Volver al menú"></button>
